# hcai-datasets

./: .gitignore  MANIFEST.in  README.md  README_PRIVATE.md  requirements.txt  setup.cfg  setup.py  version.py
.github/workflows/: publish-pypi-nightly.yml
hcai_dataset_utils/: bridge.py  bridge_pytorch.py  bridge_tf.py  dataset_indexed.py  dataset_iterable.py  generic_dataset.py  pytorch_dataset_wrapper.py  statistics.py
hcai_datasets/: __init__.py
hcai_datasets/examples/: config.ini  example_affectnet_pytorch.py  example_faces_tensorflow_native.py
hcai_datasets/hcai_affectnet/: example.py  hcai_affectnet.py  hcai_affectnet_iterable.py  hcai_affectnet_pytorch.py
hcai_datasets/hcai_audioset/: __init__.py  checksums.tsv  example.py  hcai_audioset.py  hcai_audioset_test.py
hcai_datasets/hcai_ckplus/: hcai_ckplus.py
hcai_datasets/hcai_faces/: example.py  hcai_faces.py  hcai_faces_iterable.py
hcai_datasets/hcai_is2021_ess/: __init__.py  checksums.tsv  hcai_is2021_ess_test.py
hcai_datasets/hcai_librispeech/: __init__.py  checksums.tsv  example.py  hcai_librispeech.py  hcai_librispeech_test.py  test.flac
hcai_datasets/hcai_nova_dynamic/: data_utils.py  defines.py  example.py  example2.py  hcai_nova_dynamic.py  hcai_nova_dynamic_generic.py  hcai_nova_dynamic_iterable.py  nova_db_handler.py
hcai_datasets/pokemon_ds/: __init__.py  checksums.tsv  example.py  pokemon_ds.py  pokemon_ds_test.py
hcai_datasets/tests/: test_bridge_pytorch.py
tfds_test/: __init__.py  train.py
tfds_test/pokemon_ds/: __init__.py  pokemon_ds.py
(+10 files in other folders)
