[metadata]
name = hcai-datasets
version = 0.0.6
author = Dominik Schiller
author_email = dominik.schiller@uni-a.de
description = !Alpha Version! - This repository contains code to make datasets stored on the corpora network drive of the chair compatible with the [tensorflow dataset api](https://www.tensorflow.org/api_docs/python/tf/data/Dataset)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://hcai.eu/git/project/hcai_datasets
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
#package_dir =
#    = hcai_datasets
packages = find:
python_requires = >=3.6
install_requires =
    pymongo
    opencv-python
    tensorflow>=2.1
    tensorflow-datasets


#[options.packages.find]
#where = hcai_datasets
